Schedule Availability of Public Installation
The schedule it is already accessible

--- a/CancherksWebApp/Pages/Solicitante/Publicas.cshtml
+++ b/CancherksWebApp/Pages/Solicitante/Publicas.cshtml
@@ -63,101 +63,82 @@
 	<p class="codyhouse">Este es el horario de la semana Lunes - Domingo</p>
 	<div class="cd-schedule loading">
 		<div class="timeline">
-			<ul>
-				<li><span>07:00</span></li>
-				<li><span>07:30</span></li>
-				<li><span>08:00</span></li>
-				<li><span>08:30</span></li>
-				<li><span>09:00</span></li>
-				<li><span>09:30</span></li>
-				<li><span>10:00</span></li>
-				<li><span>10:30</span></li>
-				<li><span>11:00</span></li>
-				<li><span>11:30</span></li>
-				<li><span>12:00</span></li>
-				<li><span>12:30</span></li>
-				<li><span>13:00</span></li>
-				<li><span>13:30</span></li>
-				<li><span>14:00</span></li>
-				<li><span>14:30</span></li>
-				<li><span>15:00</span></li>
-				<li><span>15:30</span></li>
-				<li><span>16:00</span></li>
-				<li><span>16:30</span></li>
-				<li><span>17:00</span></li>
-				<li><span>17:30</span></li>
-				<li><span>18:00</span></li>
+			<ul role="list" aria-label="Available time slots">
+                <li role="listitem"><span>07:00</span></li>
+                <li role="listitem"><span>07:30</span></li>
+                <li role="listitem"><span>08:00</span></li>
+                <li role="listitem"><span>08:30</span></li>
+                <li role="listitem"><span>09:00</span></li>
+                <li role="listitem"><span>09:30</span></li>
+                <li role="listitem"><span>10:00</span></li>
+                <li role="listitem"><span>10:30</span></li>
+                <li role="listitem"><span>11:00</span></li>
+                <li role="listitem"><span>11:30</span></li>
+                <li role="listitem"><span>12:00</span></li>
+                <li role="listitem"><span>12:30</span></li>
+                <li role="listitem"><span>13:00</span></li>
+                <li role="listitem"><span>13:30</span></li>
+                <li role="listitem"><span>14:00</span></li>
+                <li role="listitem"><span>14:30</span></li>
+                <li role="listitem"><span>15:00</span></li>
+                <li role="listitem"><span>15:30</span></li>
+                <li role="listitem"><span>16:00</span></li>
+                <li role="listitem"><span>16:30</span></li>
+                <li role="listitem"><span>17:00</span></li>
+                <li role="listitem"><span>17:30</span></li>
+                <li role="listitem"><span>18:00</span></li>
 			</ul>
 		</div> <!-- .timeline -->
 
 		<div class="events">
-			<ul class="wrap">
-				<li class="events-group">
-					<div class="top-info"><span>Lunes</span></div>
-					<ul>
+			<ul class="wrap" aria-label="Lista para los días de la semana">
+				<li class="events-group" role="listitem">
+					<h2 class="top-info"><span>Lunes</span></h2>
+					<ul aria-label="Horarios para Lunes">
+						<!-- Events will be added here -->
+					</ul>
+				</li>
+				<li class="events-group" role="listitem">
+					<h2 class="top-info"><span>Martes</span></h2>
+					<ul aria-label="Horarios para Martes">
+						<!-- Events will be added here -->
 					</ul>
 				</li>
 
-				<li class="events-group">
-					<div class="top-info"><span>Martes</span></div>
-					<ul>
-
+				<li class="events-group" role="listitem">
+					<h2 class="top-info"><span>Miércoles</span></h2>
+					<ul aria-label="Horarios para Miércoles">
+						<!-- Events will be added here -->
+					</ul>
+				</li>
+				<li class="events-group" role="listitem">
+					<h2 class="top-info"><span>Jueves</span></h2>
+					<ul aria-label="Horarios para Jueves">
+						<!-- Events will be added here -->
+					</ul>
+				</li>
+				<li class="events-group" role="listitem">
+					<h2 class="top-info"><span>Viernes</span></h2>
+					<ul aria-label="Horarios para Viernes">
+						<!-- Events will be added here -->
+					</ul>
+				</li>
+				<li class="events-group" role="listitem">
+					<h2 class="top-info"><span>Sábado</span></h2>
+					<ul aria-label="Horarios para Sábado">
+						<!-- Events will be added here -->
+					</ul>
+				</li>
+				<li class="events-group" role="listitem">
+					<h2 class="top-info"><span>Domingo</span></h2>
+					<ul aria-label="Horarios para Domingo">
+						<!-- Events will be added here -->
 					</ul>
 				</li>
 
-				<li class="events-group">
-					<div class="top-info"><span>Miércoles</span></div>
-
-					<ul>
-					</ul>
-				</li>
-
-				<li class="events-group">
-					<div class="top-info"><span>Jueves</span></div>
-					<ul>
-					</ul>
-				</li>
-
-				<li class="events-group">
-					<div class="top-info"><span>Friday</span></div>
-
-					<ul>
-					</ul>
-				</li>
-				<!--        -->
-				<li class="events-group">
-					<div class="top-info"><span>Sábado</span></div>
-					<ul>
-                    </ul>
-				</li>
-				<!--        -->
-				<!--        -->
-				<li class="events-group">
-					<div class="top-info"><span>Sunday</span></div>
-					<ul>
-					</ul>
-				</li>
-				<!--        -->
 			</ul>
 		</div>
 
-		<div class="event-modal">
-			<header class="header">
-				<div class="content">
-					<span class="event-date"></span>
-					<h3 class="event-name"></h3>
-				</div>
-
-				<div class="header-bg"></div>
-			</header>
-
-			<div class="body">
-				<div class="event-info"></div>
-				<div class="body-bg"></div>
-			</div>
-
-			<a href="#0" class="close">Close</a>
-		</div>
 
 		<div class="cover-layer"></div>
 	</div> <!-- .cd-schedule -->
