--- a/CancherksWebApp/Pages/Index.cshtml
+++ b/CancherksWebApp/Pages/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Home page";
 }
 
-
+<input id="emailHidden" type="hidden" value="@HttpContext.Session.GetString("email")">
 <h2>If you acces here you break our program</h2>
 
 
