--- a/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_AdminLayout.cshtml
@@ -19,7 +19,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-colorMainTrans" aria-label="Navegación principal">
             <div class="container-fluid align-middle">
                 <div class="align-middle">
-                    <a class="navbar-brand" asp-area="" asp-page="/Index" aria-label="Inicio - Cancherks">
+                    
+                    <a id="mainIcon" class="navbar-brand" asp-area="" asp-page="http://sistema-tec-web-app.somee.com/" aria-label="Inicio - Cancherks">
                         <i class="bi bi-mortarboard-fill" aria-hidden="true"></i>
                         Cancherks
                     </a>
@@ -82,10 +83,12 @@
                     </button>
 
                 </div>
-                
-                <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 20px;">
-                    <i class="bi bi-person" alt="Ícono ver perfil"></i>
-                </div>
+                <a id="iconoProfile">
+                    <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 20px;">
+                        <i class="bi bi-person" alt="Ícono ver perfil"></i>
+                    </div>
+                </a>
+
             </div>
         </nav>
     </header>
@@ -146,8 +149,7 @@
 
     <footer class="border-top footer text-muted ">
         <div class="container">
-            Correo: example@itcr.ac.cr Teléfono: 2020-2020
-
+            Correo: instalacionesdeporti@itcr.ac.cr Teléfono: 2550-2772
         </div>
     </footer>
 
