--- a/CancherksWebApp/Pages/Shared/_ErrorLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_ErrorLayout.cshtml
@@ -19,10 +19,8 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-colorMainTrans">
             <div class="container-fluid align-middle">
                 <div class="align-middle">
-                    <a class="navbar-brand" asp-area="" asp-page="/Index">
-                        @* //This could be the link to the inicial app page *@
-                        <i class="bi bi-mortarboard-fill"></i>
-
+                    <a id="mainIcon" class="navbar-brand" asp-area="" asp-page="http://sistema-tec-web-app.somee.com/" aria-label="Inicio - Cancherks">
+                        <i class="bi bi-mortarboard-fill" aria-hidden="true"></i>
                         Cancherks
                     </a>
                 </div>
@@ -59,9 +57,11 @@
                     </button>
 
                 </div>
-                <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white">
-                    <i class="bi bi-person"></i>
-                </div>
+                <a id="iconoProfile">
+                    <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 20px;">
+                        <i class="bi bi-person" alt="Ícono ver perfil"></i>
+                    </div>
+                </a>
 
 
 
