--- a/CancherksWebApp/Pages/Shared/_RequesterLayout.cshtml
+++ b/CancherksWebApp/Pages/Shared/_RequesterLayout.cshtml
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-colorMainTrans" aria-label="Navegación principal">
             <div class="container-fluid align-middle">
                 <div class="align-middle">
-                    <a class="navbar-brand" asp-area="" asp-page="/Index" aria-label="Inicio - Cancherks">
+                    <a id="mainIcon" class="navbar-brand" asp-area="" asp-page="http://sistema-tec-web-app.somee.com/" aria-label="Inicio - Cancherks">
                         <i class="bi bi-mortarboard-fill" aria-hidden="true"></i>
                         Cancherks
                     </a>
@@ -78,9 +78,11 @@
                     </button>
 
                 </div>
-                <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 24px;">
-                    <i class="bi bi-person" alt="Ícono ver perfil"></i>
-                </div>
+                <a id="iconoProfile">
+                    <div class="icon-Profile bg-footer text-center align-middle fs-3 text-white" style="margin-left: 20px;">
+                        <i class="bi bi-person" alt="Ícono ver perfil"></i>
+                    </div>
+                </a>
 
 
             </div>
