--- a/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/ModificarInstalacion.cshtml
@@ -155,7 +155,7 @@
                                     </div>
 
                                     <div class="d-flex justify-content-center mt-2">
-                                        <button type="submit" asp-page-handler="ModifySchedule" id="schedule" class="btn btn-primary button-gradient">Agregar</button>
+                                        <button type="submit" asp-page-handler="ModifySchedule" id="schedule @day.Id" class="btn btn-primary button-gradient">Agregar</button>
                                     </div>
                                 </form>
                             </div>
